# stunning-box-test

./: .dockerignore  .gitignore  Dockerfile  README.md  build_and_push.sh  check_openai_key.py  evaluate_translation.py  inference.py  initial-plan.md  parallel_corpus.csv  parallel_corpus_openai.csv  parallel_corpus_openai_unmatched.csv  pdf_extractor.py  pdf_extractor_openai.py  prepare_dataset.py  prepare_training.py  pyproject.toml  requirements.txt  setup.sh  setup_and_evaluation.sh  setup_and_train.sh  train_qlora.py  translation_evaluation_openai.csv
backend/: README.md  docker-compose.yml  main.py  vllm_server.py
evaluation_results/: page_026_results.csv  page_034_results.csv  page_035_results.csv  page_036_results.csv  summary_results.csv
frontend/: app.py  streamlit_app.py
qlora_output/: README.md  adapter_config.json
scripts/: run_all.sh  run_app.sh  run_docker_vllm.sh  run_vllm.sh  setup.sh  setup_and_train.sh  start_api.sh  start_app.sh  start_vllm.sh  streamlit_start.sh
training_data/: test.jsonl  train.jsonl
